- Template selection code is moved from Loader classes into cgi.client
  limiting the responsibility of Loaders to compilation and rendering.
  Internally, templating.find_template is replaced with
  client.selectTemplate (anatoly techtonik)
- Increased generated password length to 12 symbols to slow down GPGPU
  attacks (anatoly techtonik)

Fixed:

- issue2550789: add documentation on how to initialise a tracker
  without exposing the admin password.
- issue2550805: Postgres should search title attribute case insensitive 
  like sqlite. Reported and fixed by Tom Ekberg. (Bernhard Reiter)
- Removed some old left over "rlog" references in documentation and code.
  Makes the debugging.txt advise for the database unit tests work again.
- Fixed OpenPGP support for modern versions of libgpgme. (Bernhard Reiter)
- Restored compatibility with old style trackers (anatoly techtonik)
- Make roundup play nice with setup tools (for using with virtualenv)
  (Pradip Caulagi)
- [minor] Template responsive: make demo.py work out of the box with it,
  by setting the static_files config.ini setting to "static". 
  Footer: link fixed and hardcoded last modfied date removed. (Bernhard Reiter)
- demo.py print location of tracker home and fully erase its directory
  when nuking (anatoly techtonik)
- demo.py changing hostname in config.ini actually changes the address
  where demo.py listens. (John Rouillard)
- issue2550802: Fixed date so second fraction can't cause rounding to
  60.000 when serialising. Report and fix by Erik Hanspers. (Bernhard Reiter)
- issue2550595: Allow migrating from roundup 0.x to 1.4 (Thomas Arendsen Hein)
- issue2550634: New German orthography corrections (Thomas Arendsen Hein)

2012-12-21: 1.4.21

Features:

- issue2550782: Added a new irker detector to send notifications on IRC
  when an issue is created or messages are added. (Ezio Melotti)
- Beta version of responsive templates using devel schema
  and Twitter Bootstrap for styling (Pradip Caulagi)